clusters/olympus/apps/hubble-ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: olympus
      namespace: gateway
  hostnames:
    - hubble.mrahman.xyz
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
